--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
+    <title>New Zealand Procurement Guidance Archive</title>
     <meta name="description"
         content="Archive of historical New Zealand government procurement guidance documents and rules for research and archival purposes.">
-    <title>New Zealand Procurement Guidance Archive</title>
+    <meta property="og:title" content="New Zealand Procurement Guidance Archive">
+    <meta property="og:description"
+        content="Archive of historical New Zealand government procurement guidance documents and rules for research and archival purposes.">
+    <meta property="og:type" content="website" />
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
