--- a/index.html
+++ b/index.html
@@ -29,25 +29,17 @@
                 <img src="assets/logo.svg" alt="">
             </div> -->
             <h1>New Zealand Procurement Guidance</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html" class="active">Archive</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
     <main class="container">
-
-        <!-- About Section -->
-
-        <section class="about-section">
-            <h2>
-                <img src="assets/icon-info.svg" alt="" width="20" height="20">
-                About This Archive
-            </h2>
-            <p>This site preserves historical versions of New Zealand government procurement guidance documents that are
-                no longer available through official channels. These archived materials serve as a resource for
-                researchers, academics, and procurement professionals requiring access to previous versions of
-                procurement frameworks.</p>
-            <p>Current versions of all documents link directly to their authoritative sources on government websites.
-                Historical versions are provided as downloadable PDF files.</p>
-        </section>
 
         <!-- Document Categories -->
 
@@ -247,18 +239,6 @@
             </div>
         </section>
 
-        <!-- Contact Section -->
-
-        <section class="contact-section">
-            <h2>
-                <img src="assets/icon-email.svg" alt="" width="20" height="20">
-                Contact
-            </h2>
-            <p>For inquiries about archived documents, corrections, or suggestions for additional materials to include
-                in this repository, please contact:</p>
-            <a href="mailto:procurement.archive@example.govt.nz"
-                class="email-link">procurement.archive@example.govt.nz</a>
-        </section>
 
     </main>
 
