--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description"
         content="Archive of historical New Zealand government procurement guidance documents and rules for research and archival purposes.">
     <meta property="og:type" content="website" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
