--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
     <title>Contact | New Zealand Procurement Guidance Archive</title>
+    <meta name="description"
+        content="Archive of historical New Zealand government procurement guidance documents and rules for research and archival purposes.">
+    <meta property="og:title" content="New Zealand Procurement Guidance Archive">
+    <meta property="og:description"
+        content="Archive of historical New Zealand government procurement guidance documents and rules for research and archival purposes.">
+    <meta property="og:type" content="website" />
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Libre+Baskerville:ital,wght@0,500&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
