--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,14 @@
     <!-- Masthead -->
     <header class="masthead">
         <div class="container">
-            <h1>New Zealand Procurement Guidance</h1>
+            <a href="index.html" class="logo-link">
+                <div class="logo">
+                    <div class="logo-icon">
+                        <img src="assets/logo.svg" alt="">
+                    </div>
+                    <h1>New Zealand Procurement Guidance</h1>
+                </div>
+            </a>
             <nav>
                 <ul>
                     <li><a href="index.html">Archive</a></li>
