Fix paragraph tabbing

--- a/about.html
+++ b/about.html
@@ -51,12 +51,8 @@
                 <img src="assets/icon-info.svg" alt="" width="20" height="20">
                 About This Archive
             </h2>
-            <p>This site preserves historical versions of New Zealand government procurement guidance documents that are
-                no longer available through official channels. These archived materials serve as a resource for
-                researchers, academics, and procurement professionals requiring access to previous versions of
-                procurement frameworks.</p>
-            <p>Current versions of all documents link directly to their authoritative sources on government websites.
-                Historical versions are provided as downloadable PDF files.</p>
+            <p>This site preserves historical versions of New Zealand government procurement guidance documents that are no longer available through official channels. These archived materials serve as a resource for researchers, academics, and procurement professionals requiring access to previous versions of procurement frameworks.</p>
+            <p>Current versions of all documents link directly to their authoritative sources on government websites. Historical versions are provided as downloadable PDF files.</p>
         </section>
 
     </main>
@@ -64,8 +60,7 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="copyright">
-            © <span id="current-year"></span> New Zealand Procurement Guidance Repository. For research and
-            archival purposes.
+            © <span id="current-year"></span> New Zealand Procurement Guidance Repository. For research and archival purposes.
         </div>
     </footer>
 
