--- a/contact.html
+++ b/contact.html
@@ -51,10 +51,8 @@
                 <img src="assets/icon-email.svg" alt="" width="20" height="20">
                 Contact
             </h2>
-            <p>For inquiries about archived documents, corrections, or suggestions for additional materials to include
-                in this repository, please contact:</p>
-            <a href="mailto:procurement.archive@example.govt.nz"
-                class="email-link">procurement.archive@example.govt.nz</a>
+            <p>For inquiries about archived documents, corrections, or suggestions for additional materials to include in this repository, please contact:</p>
+            <a class="email-link" href="mailto:procurement.archive@example.govt.nz">procurement.archive@example.govt.nz</a>
         </section>
 
     </main>
@@ -62,8 +60,7 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="copyright">
-            © <span id="current-year"></span> New Zealand Procurement Guidance Repository. For research and
-            archival purposes.
+            © <span id="current-year"></span> New Zealand Procurement Guidance Repository. For research and archival purposes.
         </div>
     </footer>
 
