Add meta theme color

--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
     <meta property="og:description"
         content="Archive of historical New Zealand government procurement guidance documents and rules for research and archival purposes.">
     <meta property="og:type" content="website" />
+    <meta name="theme-color" content="#FDFAF5">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
