--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
     <meta name="theme-color" content="#FDFAF5">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <script src="theme.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -39,6 +40,12 @@
                     <li><a href="index.html">Archive</a></li>
                     <li><a href="about.html" class="active">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li>
+                        <button id="theme-toggle" class="theme-toggle-btn" aria-label="Toggle theme">
+                            <img src="assets/icon-sun.svg" alt="Light mode" class="sun-icon" width="20" height="20">
+                            <img src="assets/icon-moon.svg" alt="Dark mode" class="moon-icon" width="20" height="20">
+                        </button>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -65,9 +72,6 @@
         </div>
     </footer>
 
-    <script>
-        document.getElementById('current-year').textContent = new Date().getFullYear();
-    </script>
 </body>
 
 </html>
