--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:title" content="New Zealand Procurement Guidance Archive">
     <meta property="og:description"
         content="Archive of historical New Zealand government procurement guidance documents and rules for research and archival purposes.">
+    <meta property="og:image" content="assets/seo-cover.png" />
     <meta property="og:type" content="website" />
     <meta name="theme-color" content="#FDFAF5">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
