--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,11 @@
     <meta property="og:title" content="New Zealand Procurement Guidance Archive">
     <meta property="og:description"
         content="Archive of historical New Zealand government procurement guidance documents and rules for research and archival purposes.">
-    <meta property="og:image" content="assets/seo-cover.png" />
+    <meta property="og:image"
+        content="https://chandler-heath.github.io/nz-procurement-guidance-archive/assets/seo-cover.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image"
+        content="https://chandler-heath.github.io/nz-procurement-guidance-archive/assets/seo-cover.png" />
     <meta property="og:type" content="website" />
     <meta name="theme-color" content="#FDFAF5">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
