--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Libre+Baskerville:ital,wght@0,500&display=swap"
         rel="stylesheet">
 
-    <!-- Prefetch SVG Assets -->
+    <!-- Preload SVG Assets -->
     <link rel="preload" href="assets/logo.svg" as="image">
     <link rel="preload" href="assets/icon-sun.svg" as="image">
     <link rel="preload" href="assets/icon-moon.svg" as="image">
-    <link rel="prefetch" href="assets/icon-file-current.svg" as="image">
-    <link rel="prefetch" href="assets/icon-external.svg" as="image">
-    <link rel="prefetch" href="assets/icon-archive.svg" as="image">
-    <link rel="prefetch" href="assets/icon-info.svg" as="image">
-    <link rel="prefetch" href="assets/icon-email.svg" as="image">
+    <link rel="preload" href="assets/icon-file-current.svg" as="image">
+    <link rel="preload" href="assets/icon-external.svg" as="image">
+    <link rel="preload" href="assets/icon-archive.svg" as="image">
+    <link rel="preload" href="assets/icon-pdf.svg" as="image">
+    <link rel="preload" href="assets/icon-info.svg" as="image">
+    <link rel="preload" href="assets/icon-email.svg" as="image">
 </head>
 
 <body>
