--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
     <link rel="preload" href="assets/icon-file-current.svg" as="image">
     <link rel="preload" href="assets/icon-external.svg" as="image">
     <link rel="preload" href="assets/icon-archive.svg" as="image">
-    <link rel="preload" href="assets/icon-pdf.svg" as="image">
+    <link rel="preload" href="assets/icon-file.svg" as="image">
     <link rel="preload" href="assets/icon-info.svg" as="image">
     <link rel="preload" href="assets/icon-email.svg" as="image">
 </head>
