--- a/index.html
+++ b/index.html
@@ -94,28 +94,28 @@
                 </span>
                 <ul class="document-list">
                     <li>
-                        <a href="Government Procurement Rules 4th edition.pdf" class="document-link"
-                            target="_blank">Government Procurement Rules 4th edition</a>
+                        <a href="Government Procurement Rules 4th edition.pdf"
+                            class="document-link" target="_blank">Government Procurement Rules 4th edition</a>
                         <p class="description">Placeholder</p>
                     </li>
                     <li>
-                        <a href="Government Rules of Sourcing 3rd edition.pdf" class="document-link"
-                            target="_blank">Government Rules of Sourcing 3rd edition</a>
+                        <a href="Government Rules of Sourcing 3rd edition.pdf"
+                            class="document-link" target="_blank">Government Rules of Sourcing 3rd edition</a>
                         <p class="description">Placeholder</p>
                     </li>
                     <li>
-                        <a href="Government Rules of Sourcing 2nd edition.pdf" class="document-link"
-                            target="_blank">Government Rules of Sourcing 2nd edition</a>
+                        <a href="Government Rules of Sourcing 2nd edition.pdf"
+                            class="document-link" target="_blank">Government Rules of Sourcing 2nd edition</a>
                         <p class="description">Placeholder</p>
                     </li>
                     <li>
-                        <a href="Government Rules of Sourcing.pdf" class="document-link" target="_blank">Government
-                            Rules of Sourcing</a>
+                        <a href="Government Rules of Sourcing.pdf"
+                            class="document-link" target="_blank">Government Rules of Sourcing</a>
                         <p class="description">Placeholder</p>
                     </li>
                     <li>
-                        <a href="Mandatory Rules for Procurement by Departments.pdf" class="document-link"
-                            target="_blank">Mandatory Rules for Procurement by Departments</a>
+                        <a href="Mandatory Rules for Procurement by Departments.pdf"
+                            class="document-link" target="_blank">Mandatory Rules for Procurement by Departments</a>
                         <p class="description">Placeholder</p>
                     </li>
                 </ul>
@@ -132,15 +132,13 @@
                 </span>
                 <ul class="document-list">
                     <li>
-                        <a href="https://oag.parliament.nz/2008/procurement-guide" class="document-link"
-                            target="_blank">Auditor-General Good Practice Guide - Procurement guidance for public
-                            entities</a>
+                        <a href="https://oag.parliament.nz/2008/procurement-guide"
+                            class="document-link" target="_blank">Auditor-General Good Practice Guide - Procurement guidance for public entities</a>
                         <p class="description">Placeholder</p>
                     </li>
                     <li>
-                        <a href="https://oag.parliament.nz/2008/funding-arrangements" class="document-link"
-                            target="_blank">Auditor-General Good Practice Guide - Public sector purchases, grants, and
-                            gifts: Managing funding arrangements with external parties</a>
+                        <a href="https://oag.parliament.nz/2008/funding-arrangements"
+                            class="document-link" target="_blank">Auditor-General Good Practice Guide - Public sector purchases, grants, and gifts: Managing funding arrangements with external parties</a>
                         <p class="description">Placeholder</p>
                     </li>
                     <li>
@@ -151,30 +149,27 @@
                     </li>
                     <li>
                         <a href="https://auditnz.parliament.nz/resources/good-practice/procurement/applying-govt-procurement-rules-5ed"
-                            class="document-link" target="_blank">Audit New Zealand - What good looks like: Applying the
-                            Government Procurement Rules - 5th edition</a>
+                            class="document-link" target="_blank">Audit New Zealand - What good looks like: Applying the Government Procurement Rules - 5th edition</a>
                         <p class="description">Placeholder</p>
                     </li>
                     <li>
                         <a href="https://auditnz.parliament.nz/resources/good-practice/procurement/economic-benefits"
-                            class="document-link" target="_blank">Audit New Zealand - What good looks like: Applying
-                            economic benefits in procurement</a>
+                            class="document-link" target="_blank">Audit New Zealand - What good looks like: Applying economic benefits in procurement</a>
                         <p class="description">Placeholder</p>
                     </li>
                     <li>
                         <a href="https://auditnz.parliament.nz/resources/good-practice/governance/applying-policies-and-guidance"
-                            class="document-link" target="_blank">Audit New Zealand - What good looks like: Applying
-                            policies and guidance</a>
+                            class="document-link" target="_blank">Audit New Zealand - What good looks like: Applying policies and guidance</a>
                         <p class="description">Placeholder</p>
                     </li>
                     <li>
-                        <a href="https://www.procurement.govt.nz/guides/" class="document-link" target="_blank">New
-                            Zealand Government Procurement Guides</a>
+                        <a href="https://www.procurement.govt.nz/guides/"
+                            class="document-link" target="_blank">New Zealand Government Procurement Guides</a>
                         <p class="description">Placeholder</p>
                     </li>
                     <li>
-                        <a href="https://www.nzta.govt.nz/resources/procurement-manual" class="document-link"
-                            target="_blank">New Zealand Transport Agency - Procurement Manual</a>
+                        <a href="https://www.nzta.govt.nz/resources/procurement-manual"
+                            class="document-link" target="_blank">New Zealand Transport Agency - Procurement Manual</a>
                         <p class="description">Placeholder</p>
                     </li>
                 </ul>
@@ -188,20 +183,17 @@
                 <ul class="document-list">
                     <li>
                         <a href="What good looks like: Applying the Government Procurement Rules - 4th edition.pdf"
-                            class="document-link" target="_blank">Audit New Zealand - What good looks like: Applying the
-                            Government Procurement Rules - 4th edition</a>
+                            class="document-link" target="_blank">Audit New Zealand - What good looks like: Applying the Government Procurement Rules - 4th edition</a>
                         <p class="description">Placeholder</p>
                     </li>
                     <li>
                         <a href="What good looks like: Applying broader outcomes in procurement.pdf"
-                            class="document-link" target="_blank">Audit New Zealand - What good looks like: Applying
-                            broader outcomes in procurement</a>
+                            class="document-link" target="_blank">Audit New Zealand - What good looks like: Applying broader outcomes in procurement</a>
                         <p class="description">Placeholder</p>
                     </li>
                     <li>
-                        <a href="What good looks like: Applying Progressive procurement.pdf" class="document-link"
-                            target="_blank">Audit New Zealand - What good looks like: Applying Te Kupenga Hao Pāuaua –
-                            Progressive procurement</a>
+                        <a href="What good looks like: Applying Progressive procurement.pdf"
+                            class="document-link" target="_blank">Audit New Zealand - What good looks like: Applying Te Kupenga Hao Pāuaua – Progressive procurement</a>
                         <p class="description">Placeholder</p>
                     </li>
                 </ul>
@@ -218,20 +210,18 @@
                 </span>
                 <ul class="document-list">
                     <li>
-                        <a href="https://oag.parliament.nz/2020/conflicts" class="document-link"
-                            target="_blank">Auditor-General Good Practice Guide - Managing conflicts of interest: A
-                            guide for the public sector</a>
+                        <a href="https://oag.parliament.nz/2020/conflicts"
+                            class="document-link" target="_blank">Auditor-General Good Practice Guide - Managing conflicts of interest: A guide for the public sector</a>
                         <p class="description">Placeholder</p>
                     </li>
                     <li>
-                        <a href="https://oag.parliament.nz/2020/procurement-conflicts" class="document-link"
-                            target="_blank">Auditor-General Managing conflicts of interest in procurement</a>
+                        <a href="https://oag.parliament.nz/2020/procurement-conflicts"
+                            class="document-link" target="_blank">Auditor-General Managing conflicts of interest in procurement</a>
                         <p class="description">Placeholder</p>
                     </li>
                     <li>
                         <a href="https://auditnz.parliament.nz/resources/good-practice/conflicts-of-interest"
-                            class="document-link" target="_blank">Audit New Zealand - What Good Looks like: Managing
-                            conflicts of interest</a>
+                            class="document-link" target="_blank">Audit New Zealand - What Good Looks like: Managing conflicts of interest</a>
                         <p class="description">Placeholder</p>
                     </li>
                 </ul>
@@ -243,10 +233,10 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="copyright">
-            © <span id="current-year"></span> New Zealand Procurement Guidance Repository. For research and archival
-            purposes.
+            © <span id="current-year"></span> New Zealand Procurement Guidance Repository. For research and archival purposes.
         </div>
     </footer>
+
 </body>
 
 </html>
