Remove redundant classes

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
     <main class="container">
 
         <!-- About Section -->
-        <section class="about-section">
+        <section>
             <h2>
                 <img src="assets/icon-info.svg" alt="" width="20" height="20">
                 About This Archive
