--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
     <main class="container">
 
         <!-- Contact Section -->
-        <section class="contact-section">
+        <section>
             <h2>
                 <img src="assets/icon-email.svg" alt="" width="20" height="20">
                 Contact
