Switch icon resource hints from preload to prefetch and add crossorigin attributes

--- a/about.html
+++ b/about.html
@@ -31,12 +31,12 @@
     <link rel="preload" href="assets/logo.svg" as="image">
     <link rel="preload" href="assets/icon-sun.svg" as="image">
     <link rel="preload" href="assets/icon-moon.svg" as="image">
-    <link rel="preload" href="assets/icon-file-current.svg" as="image">
-    <link rel="preload" href="assets/icon-external.svg" as="image">
-    <link rel="preload" href="assets/icon-archive.svg" as="image">
-    <link rel="preload" href="assets/icon-file.svg" as="image">
     <link rel="preload" href="assets/icon-info.svg" as="image">
-    <link rel="preload" href="assets/icon-email.svg" as="image">
+    <link rel="prefetch" href="assets/icon-file-current.svg" as="image">
+    <link rel="prefetch" href="assets/icon-external.svg" as="image">
+    <link rel="prefetch" href="assets/icon-archive.svg" as="image" crossorigin>
+    <link rel="prefetch" href="assets/icon-file.svg" as="image" crossorigin>
+    <link rel="prefetch" href="assets/icon-email.svg" as="image">
 </head>
 
 <body>
